# jsonschema-recursive

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  help.txt
.github/workflows/: ci.yml  release.yml
src/: main.rs
