[package]
name = "jsonschema-recursive"
version = "0.1.0"
edition = "2024"
description = "A high-performance command-line tool to recursively scan directories for JSON files and validate them against their defined $schema."
repository = "https://github.com/blubbers122/jsonschema-recursive"
license = "MIT"
readme = "README.md"
keywords = ["jsonschema", "json", "validation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
walkdir = "2"
serde_json = "1"
jsonschema = "0.45.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
dashmap = "6.1.0"
globset = "0.4.18"
